--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta 
+    <link rel="shortcut icon" href="%PUBLIC_URL%/hsintian.ico" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="馨田預約系統"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
@@ -25,6 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
     <title>馨田預約系統</title>
   </head>
   <body>
